# cctools

./: .gitignore  .gitmodules  .hgignore  CMakeLists.txt  changelog.txt  mac_deploy.sh
.github/workflows/: linux-ci.yml  mac-ci.yml  win-ci.yml
MacDist/Installer.pmdoc/: 01package-contents.xml  01package.xml  index.xml
MacDist/Resources/: License.rtf
lib/CommonWidgets/: About.cpp  About.h  CCTools.cpp  CCTools.h  CMakeLists.txt  EditorTabWidget.cpp  EditorTabWidget.h  LLTextEdit.cpp  LLTextEdit.h  PathCompleter.cpp  PathCompleter.h
lib/libcc1/: CCMetaData.cpp  CCMetaData.h  CMakeLists.txt  ChipsHax.cpp  ChipsHax.h  DacFile.cpp  DacFile.h  Errors.h  GameLogic.cpp  GameLogic.h  IniFile.cpp  IniFile.h  Levelset.cpp  Levelset.h  QtHelpers.h  Stream.cpp  Stream.h  Tileset.cpp  Tileset.h  Win16Rsrc.cpp  Win16Rsrc.h  ccpatch_data.cpp  fullsec_data.cpp  pgchips_data.cpp
lib/libcc2/: CC2MD5.cpp  CC2MD5.h  CMakeLists.txt  GameLogic.cpp  GameLogic.h  GameScript.cpp  GameScript.h  Map.cpp  Map.h  Tileset.cpp  Tileset.h
res/: CC2.json  Lexy.json  TW32.json  TW48.json  WEP.json  gen_tilesets.py
share/cctools/: CC2.tis  Lexy.tis  TW32.tis  TW48.tis  WEP.tis
src/: ChipsHax.cpp  ChipsHax.h  DacFile.cpp  DacFile.h  Errors.h  GameLogic.cpp  GameLogic.h  IniFile.cpp  Levelset.cpp  Levelset.h  Stream.cpp  Stream.h  Tileset.cpp  Tileset.h  Win16Rsrc.cpp  Win16Rsrc.h
src/CC2Edit/: About.h  CC2Edit.cpp  CC2Edit.h  CC2Edit.qrc  CC2Edit.rc  CC2Edit.rc.in  CMakeLists.txt  EditorWidget.cpp  EditorWidget.h  ExtWidgets.cpp  ExtWidgets.h  HintEdit.cpp  HintEdit.h  History.cpp  History.h  ImportDialog.cpp  ImportDialog.h  MapProperties.cpp  MapProperties.h  Preferences.cpp  Preferences.h  ResizeDialog.cpp  ResizeDialog.h  ScriptEditor.cpp  ScriptEditor.h  ScriptTools.cpp  ScriptTools.h  TestSetup.cpp  TestSetup.h  TileInspector.cpp  TileInspector.h  TileWidgets.cpp  TileWidgets.h
src/CC2Edit/icons/: boot.icns
src/CC2Edit/syntax/: cc2game.xml  cc2notes.xml
src/CCEdit/: About.h  AdvancedMechanics.cpp  AdvancedMechanics.h  CCEdit.cpp  CCEdit.h  CCEdit.qrc  CCEdit.rc  CCEdit.rc.in  CMakeLists.txt  EditorWidget.cpp  EditorWidget.h  ErrorCheck.cpp  ErrorCheck.h  ExtWidgets.cpp  ExtWidgets.h  History.cpp  History.h  LayerWidget.cpp  LayerWidget.h  LevelProperties.cpp  LevelProperties.h  LevelsetProps.cpp  LevelsetProps.h  Organizer.cpp  Organizer.h  Preferences.cpp  Preferences.h  TestSetup.cpp  TestSetup.h  TileInspector.cpp  TileInspector.h  TileWidgets.cpp  TileWidgets.h  WEP.tis
src/CCHack/: About.h  CCHack.cpp  CCHack.h  CCHack.qrc  CCHack.rc  CCHack.rc.in  CMakeLists.txt  HackSettings.cpp  HackSettings.h  PageBitmap.cpp  PageBitmap.h  PageGeneral.cpp  PageGeneral.h  PageMenus.cpp  PageMenus.h  PageMisc.cpp  PageMisc.h  PageScores.cpp  PageScores.h  PageSounds.cpp  PageSounds.h  PageStoryline.cpp  PageStoryline.h
src/CCHack/icons/: sock.icns
src/CCPlay/: CCPlay.cpp  CCPlay.h  CCPlay.qrc  CCPlay.rc  CCPlay.rc.in  CMakeLists.txt  PlaySettings.cpp  PlaySettings.h
src/CCPlay/icons/: chip.icns
